--- a/index.html
+++ b/index.html
@@ -12,22 +12,33 @@
             <tr>
                 <th>Tên Sản Phẩm</th>
                 <th>Mô Tả</th>
+                <th colspan="2">Kích Thước</th>
             </tr>
         </thead> 
            <tbody>
                 <tr>
-                    <td>Áo Phông</td>
-                    <td>100.000đ</td>
+                    <td rowspan="2">Áo Phông</td>
+                    <td>100.000 vnđ</td>
+                    
+                    <td>Size X</td>
+                    <td>Size L</td>
+                </tr>
+                <tr>
+                    <td>Chai nước</td>
+                    <td>to</td>
+                    <td>nhỏ</td>
                 </tr>
             <tr>
                 <td>Quần jean</td>
-                <td>200.000</td>
+                <td>200.000 vnđ</td>
+                <td>Size M</td>
+                <td>Size L</td>
             </tr>
            </tbody>
         <tfoot>
             <tr>
                 <td>Tổng Cộng</td>
-                <td>300.000đ</td>
+                <td>300.000 vnđ</td>
             </tr>
         </tfoot>
     </table>
