--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
 <body>
     <a href="/">Home</a>
     <a href="/contact.html">Contact</a>
-    <a href="/aboutme.html">About Me</a>
+    <a href="/about.html">About Me</a>
     <h1> Thông Tin Về Chúng Tôi</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit sequi temporibus atque unde voluptate dolores dolorum illo repudiandae doloribus iure.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus animi veritatis? Iste, adipisci tenetur ducimus reiciendis cum pariatur fugit veritatis repellat ut minus laborum accusamus qui autem unde optio quidem quae, laudantium deserunt mollitia eaque! Sit veniam dolores voluptate placeat fuga, enim laborum, numquam corporis voluptatem ea cum nesciunt.</p>
