--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-       h1 {
-            color: rgb(0, 0, 255);
-            }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>Học Làm Bài Tập Bảng Table</title>
 </head>
 <body>
     <a href="/">Home</a>
     <a href="/contact.html">Contact</a>
-    <a href="/aboutme.html">About Me</a>
+    <a href="/about.html">About Me</a>
     <h1>Học tạo Table</h1>
     <h2>Những Thuộc Tính Cần Nắm</h2>
     <p>
@@ -31,7 +27,7 @@
     <div>
         <img src="/img/anh-dai-dien-hai-yodyvn1.jpg" alt="Thơ Hay" height="200"/>
     </div>
-    <div><a href="/aboutme.html"><img src="/img/nutbam.png" width="200"/></a> </div>
+    <div><a href="/about.html"><img src="/img/nutbam.png" width="200"/></a> </div>
     <p>Thu đi để lại lá vàng<br>Anh đi để lại cho nàng thằng cu<br>Mùa thu nối tiếp mùa thu<br>Thằng cu nối tiếp thằng cu ra đời<br><strong>Hảo Thơ, Thơ Hay, Thơ Hay</strong></p>
     <hr>
     <table>
